--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@ionic/pwa-elements": "^3.1.1",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "detect-inapp": "^1.4.0",
     "firebase": "^9.16.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
